about to final proof-read before sending out second draft

--- a/writeup/conjoint_experiment.tex
+++ b/writeup/conjoint_experiment.tex
@@ -1,4 +1,4 @@
-Please read the following description carefully. Then, please indicate which project you prefer to grant investment license (cap giay phep dau tu).
+Two FDI projects that want to enter your province. Please carefully read the following description of the projects. Then, please indicate which project you prefer.
 
 \begin{center}
   \begin{tabular}{ c | c | c }
