--- a/writeup/theory.tex
+++ b/writeup/theory.tex
@@ -61,7 +61,20 @@ Therefore, provincial leaders care more about private rents from FDI. In contras
 
 Fortunately for the central government, the principal-agent problem in this context is partially solved because monitoring is not too difficult. Indeed, the central government can observe the economic performance of the provinces and use personnel management to punish and reward provincial officials \citep{Sheng2007, Li2005}.\footnote{\citet{Shih2012} recently argue that economic performance does not matter to cadre promotion. However, they investigate all members of the Chinese Central Committee, including the central party apparatus, the army, and the central economic bureaucracy. These actors are not the important decision-makers in our theory.} Therefore, the principal-agent problem is only severe when the provincial officials are not interested in further promotion to the central government. This suggests that there will be a variation in private sector development across provinces according to the provincial officials' interest in promotion. By looking at this variation in the career interest of sub-national actors, my theory contributes a fresh angle to the current literature on the relationship between decentralization and corruption, which has only postulated a one-way relationship: either decentralization increases bribery \citep{Fan2009} or reduces it \citep{Guerra2009}.
 
-Two key assumptions in the theory above deserves further examination:
+The sequencing of the game is as follows:
+\begin{enumerate}
+\item At the start of the game, the endowment of a province is given.\footnote{The assumption that the endowment is exogenous is reasonable. First, if it is the kind of endowment that cannot be affected by past provincial policies, e.g. natural resources, proximity to market, then it is truly exogenous. Second, even if it is the kind of endowment that can be affected by past policies, e.g. quality of the labor force, infrastructure quality, etc., it is usually good for both foreign and domestic firms. Therefore, at the start of the game, there is not yet any discrimination between foreign and domestic firms.}
+\item The provincial official observes his endowment and calculates his current wealth, i.e. the return of rents from FDI firms.
+\item The provincial official calculates the return of pursuing a promotion, which is a gamble:
+
+the return of pursuing a promotion $=$ the return of the promotion $\times$ the probability of getting the promotion $(p)$
+
+$p = p_0 + p_1$, with $p_0$ being the base chance of getting the promotion, and $p_1$ being the added chance if the official decides to develop the domestic sector as the central government desires.
+
+\item The provincial official has to decide between keeping his current wealth (i.e. seek rents from FDI) or gambling (i.e. focus on private sector development to get a $p_0 + p_1$ chance of getting the promotion). If the official is risk averse, he prefers a small gamble over a large one. In this way, the base chance $p_0$ matters. If $p_0$ is small, it is highly uncertain that the official will get the promotion even with the added $p_1$. Therefore, the official is more likely to seek rent from the foreign firm instead of pursue a promotion when the base chance $p_0$ is small. 
+\end{enumerate}
+
+Three key assumptions in the theory above deserves further examination:
 \begin{enumerate}
 \item Why wouldn't Vietnam's central government worry that a developed private sector may lead to social change that undermines its position?
 
@@ -69,13 +82,23 @@ First, there is a large scholarship showing that authoritarian regimes are very 
 
 \item Why don't provincial leaders seek rent from the domestic sector? 
 
-First, Vietnam's private sector is still very small, especially so when FDI was first allowed into Vietnam. It is much harder for the officials to co-ordinate and maintain secrecy when engaging in corruption with multiple domestic SMEs than with one big foreign firm. Second, ironically, if officials want to grow the private sector for future rent-seeking, they must promote a enabling business environment that are free from rent-seeking. In contrast, corruption with large and existing FDI firms is much more convenient. Essentially, Vietnam's provincial officials have shifted the cost of building a thriving domestic sectors to the home countries of FDI firms and now extract rents from the high productivity and high profitability of these firms. 
+First, Vietnam's private sector was very small when FDI was first allowed into Vietnam. The size and the profitability of the average domestic firm is still smaller than those of foreign firms today. Therefore, it is both less rent and more coordination problems if provincial officials want to seek rent from domestic firms. Second, ironically, if officials want to grow the private sector for future rent-seeking, they must promote a enabling business environment that are free from rent-seeking. In contrast, corruption with large and existing FDI firms is much more convenient. Essentially, Vietnam's provincial officials have shifted the cost of building a thriving domestic sectors to the home countries of FDI firms and now extract rents from the high productivity and high profitability of these firms. 
 
+\item Is it reasonable to setup seeking rents from FDI and developing the private sector as a dichotomous choice of the provincial officials?
+
+It is a dichotomous choice because, in exchange for bribes, provincial officials must offer some advantage over domestic firms to foreign firms. This can be lower tax rate, easier access to land, more attention to concerns of firms, etc.
+
+\Cref{fig:fdi_bias_vietnam} provides evidence that this choice is real. The x-axis shows how helpful the province is according to domestic firms. The y-axis shows the fairness of provincial officials in treating foreign and domestic firms (as perceived by domestic firms). The graph shows that if a province is biased towards foreign firms, it will treat domestic firms poorly (the lower-left quadrant). The relationship is even stronger among provinces with a lot of FDI (blue labels and line).
 \end{enumerate}
 
+\begin{figure}[!ht]
+\includegraphics[width=\textwidth, height=\textheight,keepaspectratio]{../figure/FDI_bias}
+\caption{The relationship between a province's FDI bias and attitude towards the private sector}
+\label{fig:fdi_bias_vietnam}
+\end{figure}
 
 In sum, I propose a hypothesis about variation across Vietnam's provinces:
 
 \begin{quote}
-Hypothesis: High concentration of FDI in provinces where provincial leaders are not interested in promotion is associated stunted domestic firms in those provinces
+Hypothesis: The presence of large FDI firms in provinces whose leaders are not interested in promotion is associated with a large gap in the government's treatment of domestic and foreign firms.
 \end{quote}
